<?xml version="1.0"?>
<package>
  <name>vss_sdk</name>
  <version>0.0.0</version>
  <description>The vss_sdk package</description>


  <maintainer email="autobotz.ufmg@gmail.com">Autobotz</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/vss_sdk</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-gui</build_depend>
  <build_depend>glut</build_depend>
  <!-- <build_depend>bullet</build_depend> -->
  <build_depend>libsqlite3-dev</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>boost</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>glut</run_depend>
  <!-- <run_depend>bullet</run_depend> -->
  <run_depend>libsqlite3-dev</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
